2007-04-15  Sebastian Pölsterl  <marduk@k-d-w.org>

	* src/libnsm/Downloaders/HttpDownloader.cs
	* src/libnsm/Downloaders/AbstractDownloader.cs
	* src/libnsm/Downloaders/FtpDownloader.cs
	* src/libnsm/Globals.cs.in
	* src/libnsm/libnsm.mdp
	* src/libnsm/NewStuff.cs
	* src/libnsm/DownloadManager.cs
	* src/libnsm/Makefile.am
	* src/libnsm/DownloadClient.cs
	* tests
	* examples
	* examples/DownloadManager.py
	* examples/DBusTester.py:
	Got rid of DownloadClient. DownloadManager now handels
	all the downloading.
	
	Renamed tests dir to examples and added DownloadManager
	example

2007-04-15  Sebastian Pölsterl  <marduk@k-d-w.org>

	* src/libnsm/Downloaders/HttpDownloader.cs
	* src/libnsm/Downloaders/AbstractDownloader.cs
	* src/libnsm/DownloadItem.cs
	* src/libnsm/NewStuff.cs
	* src/libnsm/DownloadManager.cs
	* src/libnsm/Makefile.am
	* src/libnsm/DownloadClient.cs
	* src/libnsm/Download.cs
	* src/nsm/Main.cs:
	Created DownloadManager class
	
	It's currently only working for HTTP
	and no progress can be retrieved

2007-04-14  Sebastian Pölsterl  <marduk@k-d-w.org>

	* src/libnsm/Downloaders/HttpDownloader.cs
	* src/libnsm/Downloaders/AbstractDownloader.cs
	* src/libnsm/Downloaders/FtpDownloader.cs
	* src/libnsm/NewStuff.cs
	* src/libnsm/DownloadItem.cs:
	Created namespace Nsm.Downloaders
	
2007-04-14  Sebastian Pölsterl  <marduk@k-d-w.org>

	* src/libnsm/NewStuffManager.cs
	* src/libnsm/Downloaders/HttpDownloader.cs
	* src/libnsm/Downloaders/AbstractDownloader.cs
	* src/libnsm/Downloaders/IDownloader.cs
	* src/libnsm/Downloaders/FtpDownloader.cs
	* src/libnsm/Compression/Decompresser.cs
	* src/libnsm/Downloader.cs
	* src/libnsm/NewStuff.cs
	* src/libnsm/Makefile.am
	* src/libnsm/DownloadItem.cs
	* src/nsm/nsm.mdp
	* TODO:
	Refactored downloading

2007-02-09  Sebastian Pölsterl  <marduk@k-d-w.org>

	* configure.ac:
	Post release version bump

========== Version 0.2.2 released 2007-02-09 ==========

2007-02-09  Sebastian Pölsterl  <marduk@k-d-w.org>
